--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>jgraphx</artifactId>
             <version>2.0.0.1</version>
         </dependency>
+<!--        &lt;!&ndash; 定义可用于JavaFX UI工具包的UI控件、图表和外观。 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.openjfx</groupId>-->
+<!--            <artifactId>javafx-controls</artifactId>-->
+<!--            <version>21.0.2</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
 <!--            <groupId>org.jgrapht</groupId>-->
 <!--            <artifactId>jgrapht-core</artifactId>-->
 <!--            <version>1.5.1</version>-->
